--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
+    "kind-of": "^6.0.3",
     "nodemon": "^1.19.4",
     "ws": "^7.3.0"
   }
